# paigasus-helikon

./: .coderabbit.yaml  .gitattributes  .gitignore  .versionrc  BENCHMARKS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  release-plz.toml
crates/paigasus-helikon/: CHANGELOG.md  Cargo.toml  README.md
crates/paigasus-helikon-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/paigasus-helikon-core/: CHANGELOG.md  Cargo.toml  README.md
crates/paigasus-helikon-core/src/: __private.rs  agent.rs  agent_as_tool.rs  agent_builder.rs  command_match.rs  compacting_session.rs  context.rs  control.rs  guardrail.rs  handoff.rs  hook.rs  item.rs  lib.rs  loop_state.rs  model.rs  path_match.rs  permission.rs  redaction.rs  runner.rs  schema.rs  session.rs  state.rs  token_counter.rs  tool.rs  workflow.rs
crates/paigasus-helikon-core/tests/: agent_as_tool.rs  collect_typed.rs  compacting_session.rs  compile_run_result_typed.rs  failure_slot.rs  guardrails.rs  handoff.rs  hooks.rs  injection.rs  loop_happy_path.rs  loop_parallel_limit.rs  loop_parallel_tools.rs  object_safety.rs  permissions.rs  private_probe.rs  serde_roundtrip.rs  session_memory.rs  session_projection.rs  structured_output.rs  subagent_propagation.rs  transition_unit.rs  trybuild_ui.rs  workflow_loop.rs  workflow_parallel.rs  workflow_pipeline.rs  workflow_sequential.rs  workflow_tracing.rs
crates/paigasus-helikon-core/tests/common/: mod.rs
crates/paigasus-helikon-core/tests/snapshots/: loop_happy_path__multi_turn_with_tool_call.snap  serde_roundtrip__agent_event_agent_updated_roundtrip.snap  (+36 more)
crates/paigasus-helikon-evals/: CHANGELOG.md  Cargo.toml  README.md
crates/paigasus-helikon-evals/src/: lib.rs
crates/paigasus-helikon-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/paigasus-helikon-macros/src/: attr.rs  expand.rs  lib.rs  resolve.rs  signature.rs
crates/paigasus-helikon-macros/tests/: end_to_end.rs  schema_golden.rs  trybuild.rs
crates/paigasus-helikon-mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/paigasus-helikon-mcp/src/: error.rs  lib.rs  server.rs
crates/paigasus-helikon-mcp/tests/: acceptance_filesystem.rs  agent_server.rs  client_tools.rs  http_server.rs  lazy.rs  roundtrip.rs
crates/paigasus-helikon-providers-anthropic/: CHANGELOG.md  Cargo.toml  README.md
crates/paigasus-helikon-providers-anthropic/src/: builder.rs  capabilities.rs  error.rs  http.rs  lib.rs  model.rs  settings.rs  sse.rs  stream.rs
crates/paigasus-helikon-providers-anthropic/tests/: live.rs  messages_streaming.rs  messages_wire.rs  prompt_caching.rs  structured_output.rs
crates/paigasus-helikon-providers-bedrock/: CHANGELOG.md  Cargo.toml  README.md
crates/paigasus-helikon-providers-bedrock/src/: builder.rs  capabilities.rs  document.rs  error.rs  family.rs  lib.rs  model.rs  stream.rs
crates/paigasus-helikon-providers-bedrock/tests/: cancellation.rs  converse_request.rs  converse_streaming.rs  live.rs  schema_rewriter.rs
crates/paigasus-helikon-providers-openai/: CHANGELOG.md  Cargo.toml  README.md
crates/paigasus-helikon-providers-openai/src/: builder.rs  capabilities.rs  error.rs  lib.rs  model.rs
crates/paigasus-helikon-providers-openai/tests/: cancellation.rs  chat_streaming.rs  chat_wire.rs  live.rs  responses_streaming.rs  responses_wire.rs
crates/paigasus-helikon-runtime-axum/: CHANGELOG.md  Cargo.toml  README.md
crates/paigasus-helikon-runtime-axum/examples/: curl_server.rs
crates/paigasus-helikon-runtime-axum/src/: auth.rs  context.rs  dto.rs  error.rs  event_log.rs  lib.rs  registry.rs  server.rs  session.rs
crates/paigasus-helikon-runtime-axum/tests/: auth.rs  concurrency.rs  openapi.rs  runs.rs  server.rs  ws.rs
crates/paigasus-helikon-runtime-temporal/: CHANGELOG.md  Cargo.toml  README.md
crates/paigasus-helikon-runtime-temporal/src/: lib.rs
crates/paigasus-helikon-runtime-tokio/: CHANGELOG.md  Cargo.toml  README.md
crates/paigasus-helikon-runtime-tokio/src/: lib.rs  retry.rs
crates/paigasus-helikon-runtime-tokio/tests/: run_control.rs  run_error.rs  run_smoke.rs  run_streamed.rs  session_persistence.rs
crates/paigasus-helikon-sessions-postgres/: Cargo.toml  README.md
crates/paigasus-helikon-sessions-postgres/migrations/: 0001_session_events.sql
crates/paigasus-helikon-sessions-postgres/src/: lib.rs
crates/paigasus-helikon-sessions-postgres/tests/: conformance.rs
crates/paigasus-helikon-sessions-redis/: Cargo.toml  README.md
crates/paigasus-helikon-sessions-redis/src/: lib.rs
crates/paigasus-helikon-sessions-redis/tests/: conformance.rs
crates/paigasus-helikon-sessions-sqlite/: CHANGELOG.md  Cargo.toml  README.md
crates/paigasus-helikon-sessions-sqlite/migrations/: 0001_session_events.sql
crates/paigasus-helikon-sessions-sqlite/src/: lib.rs
crates/paigasus-helikon-sessions-sqlite/tests/: concurrent_writers.rs  conformance.rs  multi_session.rs  persistence.rs  roundtrip.rs
crates/paigasus-helikon-sessions-testkit/: Cargo.toml  README.md
crates/paigasus-helikon-sessions-testkit/src/: lib.rs
crates/paigasus-helikon-sessions-testkit/tests/: memory.rs
crates/paigasus-helikon-tools/: CHANGELOG.md  Cargo.toml  README.md
crates/paigasus-helikon-tools/examples/: egress_proxy.rs  explore_sandbox.rs  os_sandbox_demo.rs  web_research.rs
crates/paigasus-helikon-tools/src/: bash.rs  edit.rs  lib.rs  read.rs  sandbox.rs  write.rs
crates/paigasus-helikon-tools/tests/: bash.rs  egress_proxy.rs  exec_backend.rs  forkd_backend.rs  forkd_live.rs  forkd_reconcile.rs  forkd_tls.rs  host_backend.rs  os_sandbox.rs  os_sandbox_seatbelt.rs  sandbox.rs  sandbox_navigation.rs  web_fetch.rs  web_search.rs
crates/paigasus-helikon/benches/: tool_dispatch.rs
crates/paigasus-helikon/examples/: budget_assistant_anthropic.rs  budget_assistant_openai.rs  langfuse_tracing.rs  leukemia_classifier.rs  multi_agent_triage.rs  streaming_console.rs  structured_output.rs
crates/paigasus-helikon/src/: lib.rs
crates/paigasus-helikon/tests/: otel_spans.rs  trybuild.rs
(+324 files in other folders)
