[workspace]
resolver = "2"
members  = ["crates/*"]

[workspace.package]
version       = "0.0.0"
edition       = "2021"
rust-version  = "1.75"
authors       = ["Sven Maschek"]
license       = "Apache-2.0 OR MIT"
repository    = "https://github.com/SMK1085/paigasus-helikon"
homepage      = "https://github.com/SMK1085/paigasus-helikon"
keywords      = ["ai", "llm", "agents", "sdk", "openai"]
categories    = ["api-bindings", "asynchronous"]

[workspace.dependencies]
anyhow                = "1"
async-stream          = "0.3"
async-trait           = "0.1"
futures-core          = "0.3"
futures-util          = { version = "0.3", default-features = false, features = ["std"] }
insta                 = "1"
opentelemetry         = "0.27"
proc-macro-crate      = "3"
proc-macro2           = "1"
quote                 = "1"
rmcp                  = "0.16"
rustversion           = "1"
schemars              = "1"
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
syn                   = { version = "2", features = ["full"] }
thiserror             = "2"
tokio                 = { version = "1", features = ["full"] }
tokio-util            = { version = "0.7", default-features = false, features = ["rt"] }
tracing               = "0.1"
trybuild              = "1"

# Internal — single source of truth so members depend via `workspace = true`
paigasus-helikon-core                = { path = "crates/paigasus-helikon-core",                version = "0.1.0" }
paigasus-helikon-macros              = { path = "crates/paigasus-helikon-macros",              version = "0.0.0" }
paigasus-helikon-providers-openai    = { path = "crates/paigasus-helikon-providers-openai",    version = "0.0.0" }
paigasus-helikon-providers-anthropic = { path = "crates/paigasus-helikon-providers-anthropic", version = "0.0.0" }
paigasus-helikon-mcp                 = { path = "crates/paigasus-helikon-mcp",                 version = "0.0.0" }
paigasus-helikon-tools               = { path = "crates/paigasus-helikon-tools",               version = "0.0.0" }
paigasus-helikon-runtime-tokio       = { path = "crates/paigasus-helikon-runtime-tokio",       version = "0.0.0" }
paigasus-helikon-runtime-axum        = { path = "crates/paigasus-helikon-runtime-axum",        version = "0.0.0" }
paigasus-helikon-runtime-temporal    = { path = "crates/paigasus-helikon-runtime-temporal",    version = "0.0.0" }
paigasus-helikon-runtime-agentcore   = { path = "crates/paigasus-helikon-runtime-agentcore",   version = "0.0.0" }
paigasus-helikon-evals               = { path = "crates/paigasus-helikon-evals",               version = "0.0.0" }

[workspace.lints.rust]
missing_docs = "warn"
