[workspace]
resolver = "2"
members  = ["crates/*"]

[workspace.package]
version       = "0.0.0"
edition       = "2021"
rust-version  = "1.85"
authors       = ["Sven Maschek"]
license       = "Apache-2.0 OR MIT"
repository    = "https://github.com/SMK1085/paigasus-helikon"
homepage      = "https://github.com/SMK1085/paigasus-helikon"
keywords      = ["ai", "llm", "agents", "sdk", "openai"]
categories    = ["api-bindings", "asynchronous"]

[workspace.dependencies]
anyhow                = "1"
async-openai          = "0.40"
cap-std               = "4"
axum                  = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
base64                = "0.22"
async-stream          = "0.3"
async-trait           = "0.1"
eventsource-stream    = "0.2"
futures-core          = "0.3"
futures-util          = { version = "0.3", default-features = false, features = ["std"] }
insta                 = "1"
jiff                  = { version = "0.2", features = ["serde"] }
libc                  = "0.2"
opentelemetry         = "0.32"
proc-macro-crate      = "3"
proc-macro2           = "1"
quote                 = "1"
reqwest               = { version = "0.13", default-features = false }
rmcp                  = { version = "1.7", default-features = false, features = [
  "client",
  "server",
  "transport-io",
  "transport-child-process",
  "transport-streamable-http-server",
  "transport-streamable-http-client-reqwest",
  "reqwest",
] }
rustversion           = "1"
schemars              = "1"
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
sqlx                  = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
syn                   = { version = "2", features = ["full"] }
tempfile              = "3"
thiserror             = "2"
tokio                 = { version = "1", features = ["full"] }
tokio-util            = { version = "0.7", default-features = false, features = ["rt"] }
tracing               = "0.1"
tracing-subscriber    = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.33"
opentelemetry_sdk     = { version = "0.32", features = ["rt-tokio", "testing"] }
opentelemetry-otlp    = { version = "0.32", default-features = false, features = ["trace", "http-proto", "reqwest-client"] }
trybuild              = "1"
url                   = "2"
dom_smoothie          = "0.18"
htmd                  = "0.5"
wiremock              = "0.6"

# Internal — single source of truth so members depend via `workspace = true`
paigasus-helikon                     = { path = "crates/paigasus-helikon", version = "0.3.11" }
paigasus-helikon-core                = { path = "crates/paigasus-helikon-core", version = "0.5.4" }
paigasus-helikon-macros              = { path = "crates/paigasus-helikon-macros", version = "0.2.2" }
paigasus-helikon-providers-openai    = { path = "crates/paigasus-helikon-providers-openai", version = "0.2.8" }
paigasus-helikon-providers-anthropic = { path = "crates/paigasus-helikon-providers-anthropic", version = "0.1.10" }
paigasus-helikon-mcp                 = { path = "crates/paigasus-helikon-mcp", version = "0.1.3" }
paigasus-helikon-tools               = { path = "crates/paigasus-helikon-tools", version = "0.1.5" }
paigasus-helikon-runtime-tokio       = { path = "crates/paigasus-helikon-runtime-tokio", version = "0.1.9" }
paigasus-helikon-runtime-axum        = { path = "crates/paigasus-helikon-runtime-axum",        version = "0.0.0" }
paigasus-helikon-runtime-temporal    = { path = "crates/paigasus-helikon-runtime-temporal",    version = "0.0.0" }
paigasus-helikon-runtime-agentcore   = { path = "crates/paigasus-helikon-runtime-agentcore",   version = "0.0.0" }
paigasus-helikon-evals               = { path = "crates/paigasus-helikon-evals",               version = "0.0.0" }
paigasus-helikon-sessions-sqlite     = { path = "crates/paigasus-helikon-sessions-sqlite", version = "0.1.11" }

[workspace.lints.rust]
missing_docs = "warn"
