[package]
name        = "paigasus-helikon-core"
description = "Trait surface and concrete types for the Paigasus Helikon AI SDK."
version                = "0.2.1"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
async-trait    = { workspace = true }
thiserror      = { workspace = true }
anyhow         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
futures-core   = { workspace = true }
tokio-util     = { workspace = true }
schemars       = { workspace = true }
futures-util   = { workspace = true }
async-stream   = { workspace = true }
jiff           = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
insta        = { workspace = true, features = ["yaml", "json"] }
schemars     = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
trybuild     = { workspace = true }

[lints]
workspace = true
