[package]
name        = "paigasus-helikon-evals"
description = "Evaluation harness for the Paigasus Helikon AI SDK."
version                = "0.0.0"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
publish                = false

[lints]
workspace = true
