[package]
name        = "paigasus-helikon-macros"
description = "Proc macros for the Paigasus Helikon AI SDK."
version                = "0.2.1"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[lib]
proc-macro = true

[dependencies]
proc-macro2      = { workspace = true }
proc-macro-crate = { workspace = true }
quote            = { workspace = true }
syn              = { workspace = true }

[dev-dependencies]
paigasus-helikon-core = { workspace = true }
async-trait  = { workspace = true }
schemars     = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true, features = ["macros", "rt"] }
anyhow       = { workspace = true }
trybuild     = { workspace = true }
insta        = { workspace = true, features = ["json"] }

[lints]
workspace = true
