[package]
name        = "paigasus-helikon-mcp"
description = "MCP integration for the Paigasus Helikon AI SDK — rmcp client and server wrappers"
version                = "0.1.1"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
paigasus-helikon-core = { workspace = true }
anyhow                = { workspace = true }
async-trait           = { workspace = true }
axum                  = { workspace = true }
futures-util          = { workspace = true }
rmcp                  = { workspace = true }
serde_json            = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }
tokio-util            = { workspace = true }

[dev-dependencies]
async-stream  = { workspace = true }
futures-core  = { workspace = true }

[lints]
workspace = true
