[package]
name        = "paigasus-helikon-providers-bedrock"
description = "Amazon Bedrock (Converse API) provider for the Paigasus Helikon AI SDK."
version                = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
paigasus-helikon-core  = { workspace = true }
aws-config             = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
aws-smithy-types       = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
aws-smithy-runtime     = { workspace = true }
async-trait            = { workspace = true }
async-stream           = { workspace = true }
futures-core           = { workspace = true }
serde                  = { workspace = true }
serde_json             = { workspace = true }
thiserror              = { workspace = true }
anyhow                 = { workspace = true }
tokio                  = { workspace = true }
tracing                = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
insta        = { workspace = true, features = ["json", "yaml"] }
tokio        = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
