[package]
name        = "paigasus-helikon-providers-openai"
description = "OpenAI provider for the Paigasus Helikon AI SDK."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
