[package]
name        = "paigasus-helikon-providers-openai"
description = "OpenAI provider for the Paigasus Helikon AI SDK."
version                = "0.2.3"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
paigasus-helikon-core = { workspace = true }
async-openai          = { workspace = true, features = ["chat-completion", "responses"] }
async-trait           = { workspace = true }
async-stream          = { workspace = true }
futures-core          = { workspace = true }
futures-util          = { workspace = true }
reqwest               = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
thiserror             = { workspace = true }
anyhow                = { workspace = true }
tokio                 = { workspace = true }
tokio-util            = { workspace = true }
tracing               = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
insta    = { workspace = true, features = ["json", "yaml"] }
tokio    = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
reqwest  = { workspace = true }

[lints]
workspace = true
