[package]
name        = "paigasus-helikon-runtime-axum"
description = "Self-hosted Axum HTTP/SSE/WebSocket server runtime for Paigasus Helikon agents"
version                = "0.0.0"            # bumped to 0.1.0 in the final ascend task, not here
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
publish                = false             # removed in the final ascend task

[dependencies]
paigasus-helikon-core          = { workspace = true }
paigasus-helikon-runtime-tokio = { workspace = true }
axum         = { workspace = true, features = ["http1", "tokio", "json", "query", "ws"] }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
futures-util = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
utoipa       = { workspace = true, optional = true }

[dev-dependencies]
tokio             = { workspace = true }
reqwest           = { workspace = true }
tokio-tungstenite = { workspace = true }

[features]
default = ["openapi"]
openapi = ["dep:utoipa"]

[lints]
workspace = true
