[package]
name        = "paigasus-helikon-runtime-tokio"
description = "Default ephemeral Tokio runner for the Paigasus Helikon AI SDK."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true
