[package]
name        = "paigasus-helikon-runtime-tokio"
description = "Default ephemeral Tokio runner for the Paigasus Helikon AI SDK."
version                = "0.1.1"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
paigasus-helikon-core = { workspace = true }
async-trait  = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true }
anyhow     = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
