[package]
name        = "paigasus-helikon-sessions-postgres"
description = "PostgreSQL-backed Session backend for the Paigasus Helikon AI SDK."
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
paigasus-helikon-core = { workspace = true }
async-trait           = { workspace = true }
serde_json            = { workspace = true }
# adds postgres driver + aws-lc-rs rustls TLS on top of the workspace sqlx base.
# `tls-rustls-aws-lc-rs` is the confirmed sqlx 0.9.0 feature name (not `ring`).
# `json` is required for `serde_json::Value` binding to JSONB columns and for
# `sqlx::types::Json<T>` decoding.
sqlx                  = { workspace = true, features = ["postgres", "tls-rustls-aws-lc-rs", "json"] }

[dev-dependencies]
paigasus-helikon-sessions-testkit = { path = "../paigasus-helikon-sessions-testkit" }
tokio                             = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
