[package]
name        = "paigasus-helikon-sessions-redis"
description = "Redis-backed Session backend (Redis Streams) for the Paigasus Helikon AI SDK."
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
paigasus-helikon-core = { workspace = true }
async-trait           = { workspace = true }
serde_json            = { workspace = true }
thiserror             = { workspace = true }
redis                 = { workspace = true }

[dev-dependencies]
paigasus-helikon-sessions-testkit = { path = "../paigasus-helikon-sessions-testkit" }
tokio                             = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
