[package]
name        = "paigasus-helikon-sessions-sqlite"
description = "SQLite-backed Session backend for the Paigasus Helikon AI SDK."
version                = "0.1.17"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
paigasus-helikon-core = { workspace = true }
async-trait           = { workspace = true }
jiff                  = { workspace = true }
serde_json            = { workspace = true }
sqlx                  = { workspace = true }
thiserror             = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
tempfile = "3"
paigasus-helikon-sessions-testkit = { path = "../paigasus-helikon-sessions-testkit" }

[lints]
workspace = true
