[package]
name        = "paigasus-helikon-sessions-testkit"
description = "Internal: shared Session conformance suite for Paigasus Helikon backends."
version     = "0.0.0"
publish     = false
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
paigasus-helikon-core = { workspace = true }
async-trait           = { workspace = true }
futures-util          = { workspace = true }
tokio                 = { workspace = true, features = ["macros", "rt-multi-thread"] }
jiff                  = { workspace = true }

[lints]
workspace = true
