[package]
name        = "paigasus-helikon-tools"
description = "Sandboxed Read/Write/Edit/Bash tools for the Paigasus Helikon AI SDK."
version                = "0.0.0"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
publish                = false

[dependencies]
paigasus-helikon-core = { workspace = true }
async-trait           = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
schemars              = { workspace = true }
thiserror             = { workspace = true }
anyhow                = { workspace = true }
cap-std               = { workspace = true }
tokio                 = { workspace = true, features = ["process", "time", "rt", "macros"] }

[dev-dependencies]
tokio        = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tempfile     = { workspace = true }
futures-util = { workspace = true }
# Path-only (version-less) internal dev-dep for the example — stripped from the
# published manifest; examples are not built during `cargo publish --verify`.
paigasus-helikon-providers-openai = { path = "../paigasus-helikon-providers-openai" }

[lints]
workspace = true
