[package]
name        = "paigasus-helikon-tools"
description = "Sandboxed Read/Write/Edit/Bash tools for the Paigasus Helikon AI SDK."
version                = "0.2.8"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
paigasus-helikon-core = { workspace = true }
async-trait           = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
schemars              = { workspace = true }
thiserror             = { workspace = true }
anyhow                = { workspace = true }
cap-std               = { workspace = true }
tokio                 = { workspace = true, features = ["process", "time", "rt", "macros"] }
reqwest               = { workspace = true, optional = true, features = ["json", "query", "rustls"] }
url                   = { workspace = true, optional = true }
dom_smoothie          = { workspace = true, optional = true }
htmd                  = { workspace = true, optional = true }
futures-util          = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock    = { workspace = true, optional = true }
seccompiler = { workspace = true, optional = true }

[dev-dependencies]
tokio        = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tempfile     = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
wiremock     = { workspace = true }
rcgen        = { workspace = true }
tokio-rustls = { workspace = true }
# Path-only (version-less) internal dev-dep for the example — stripped from the
# published manifest; examples are not built during `cargo publish --verify`.
paigasus-helikon-providers-openai = { path = "../paigasus-helikon-providers-openai" }

[[example]]
name              = "web_research"
required-features = ["web"]

[[example]]
name              = "os_sandbox_demo"
required-features = ["os-sandbox"]

[[example]]
name              = "egress_proxy"
required-features = ["microvm"]

[features]
# Network tools (WebFetch + WebSearch). Off by default so FS/Bash-only
# consumers never pull reqwest. `tokio/net` is needed for the SSRF DNS check.
web = ["dep:reqwest", "dep:url", "dep:dom_smoothie", "dep:htmd", "tokio/net"]
# OS-enforced Bash containment (Linux: Landlock + seccomp). Off by default.
os-sandbox = ["dep:landlock", "dep:seccompiler"]
# microVM Bash containment (forkd Firecracker controller, REST client). Off by
# default. Portable: the client compiles everywhere; the daemon needs Linux/KVM.
microvm = ["dep:reqwest", "dep:futures-util", "tokio/net", "tokio/io-util"]

[lints]
workspace = true
